# secretary

./: .env.example  .gitignore  CLAUDE.md  com.family.secretary.plist  com.jyk.secretary.plist  pyproject.toml
.beads/: issues.jsonl
config/: settings.py
docs/: development-guide.md
src/secretary/: main.py
src/secretary/agent/: brain.py  system_prompt.py
src/secretary/agent/tools/: calendar_tools.py  family_tools.py  memo_tools.py  reminder_tools.py  search_tools.py  todo_tools.py  user_tools.py
src/secretary/models/: __init__.py  calendar.py  conversation.py  database.py  memo.py  user.py
src/secretary/scheduler/: reminder_engine.py
src/secretary/services/: calendar_service.py  conversation_service.py  memo_service.py  notification_service.py  user_service.py
src/secretary/web/: app.py  dashboard.html  routes.py
tests/: conftest.py  test_agent_brain.py  test_calendar_service.py  test_conversation_service.py  test_memo_service.py  test_split_message.py  test_strip_html.py  test_user_service.py
